residual changes i didn't push??

--- a/thesis/main.bib
+++ b/thesis/main.bib
@@ -4,8 +4,8 @@
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 	
 @inproceedings{church,
-  author =       {Church, Maura and Cuthbert, Michael Scott},
-  title =        {Improving Rhythmic Transcriptions via Probability Models Applied Post-OMR},
+  author        ={Church, Maura and Cuthbert, Michael Scott},
+  title         ={Improving Rhythmic Transcriptions via Probability Models Applied Post-OMR},
   crossref =     {ismir},
   pages =        {643-- 647}
 }
@@ -27,9 +27,25 @@
   year         = 2007
  }
  
-@article{hewlett, title={A Base-40 Number-line Representation of Musical Pitch Notation}, volume={4}, url={http://www.ccarh.org/publications/reprints/base40/}, journal={Musikometrika}, author={Hewlett, Walter B}, year={1992}, pages={1?14}}
+@article{hewlett, 
+  title        =           {A Base-40 Number-line Representation of Musical Pitch Notation}, 
+  volume   =         {4}, 
+  url     =        {http://www.ccarh.org/publications/reprints/base40/}, 
+  journal   =         {Musikometrika}, 
+  author   =     {Hewlett, Walter B}, 
+  year  = {1992}, 
+  pages={1?14}
+}
 
-@article{rebelo, title={Optical music recognition: state-of-the-art and open issues}, volume={1}, DOI={10.1007/s13735-012-0004-6}, number={3}, journal={International Journal of Multimedia Information Retrieval}, author={Rebelo, Ana and Fujinaga, Ichiro and Paszkiewicz, Filipe and Marcal, Andre R. S. and Guedes, Carlos and Cardoso, Jaime S.}, year={2012}, month={Feb}, pages={173?190}}
+@article{rebelo, 
+  title={Optical music recognition: state-of-the-art and open issues}, 
+  volume={1}, DOI={10.1007/s13735-012-0004-6}, 
+  number={3}, 
+  journal={International Journal of Multimedia Information Retrieval}, 
+  author={Rebelo, Ana and Fujinaga, Ichiro and Paszkiewicz, Filipe and Marcal, Andre R. S. and Guedes, Carlos and Cardoso, Jaime S.}, 
+  year={2012}, 
+  month={Feb}, 
+  pages={173?190}}
 
 @phdthesis{white,
   author       = {White, Christopher Wm.}, 
