--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -16,7 +16,7 @@
 
 %\documentclass[12pt,vi,twoside]{mitthesis}
 %%
-%%  If you want your thesis copyright to you instead of MIT, use the
+%%  If you want your thesis` copyright to you instead of MIT, use the
 %%  ``vi'' option, as above.
 %%
 %\documentclass[12pt,twoside,leftblank]{mitthesis}
